# planar

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
assets/: pass.frag  pass.vert
src/: PlanarApp.cpp  loop.cpp  loop.hpp  primitives.cpp  primitives.hpp
test/: Makefile  run_tests.cpp
xcode/: PlanarApp.cpp
xcode/Planar.xcodeproj/: project.pbxproj
xcode/Planar.xcodeproj/project.xcworkspace/xcshareddata/: Planar.xcscmblueprint
xcode/Planar.xcodeproj/project.xcworkspace/xcuserdata/weshoke.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/Planar.xcodeproj/xcuserdata/weshoke.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
xcode/Planar.xcodeproj/xcuserdata/weshoke.xcuserdatad/xcschemes/: Planar.xcscheme  xcschememanagement.plist
